--- a/common.html
+++ b/common.html
@@ -2,71 +2,72 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ishigaminozomi 1st Anniversary website</title>
-    <mata name="description" content="ページの概要文を記載します">
-        <meta name="viewport" content="width=device-width">
-        <script src="./js/toggle-menu.js"></script>
-                <!--ABイントレ-->
-                <script>
-                  (function (d) {
-                    var config = {
-                      kitId: 'xwp1pqz',
-                      scriptTimeout: 3000,
-                      async: true
-                    },
-                      h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
-                  })(document);
-                </script>
-        <link href="./css/common.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Ishigami 1st Anniv website</title>
+  <mata name="description" content="ページの概要文を記載します">
+    <meta name="viewport" content="width=device-width">
+    <script src="./js/toggle-menu.js"></script>
+    <!--ABイントレ-->
+    <script>
+      (function (d) {
+        var config = {
+          kitId: 'xwp1pqz',
+          scriptTimeout: 3000,
+          async: true
+        },
+          h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
+      })(document);
+    </script>
+    <link href="./css/common.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <!-- ここからheader -->
-    <header class="header">
-      <div class="header-inner">
-          <a class="header-logo" href="./index.html">
-            <img src="./images/index/1125一段ロゴ透過.png" alt="logo">
-          </a>
-          <button class="toggle-menu-button"></button>
-          <div class="header-site-menu">
-              <nav class="site-menu">
-                  <ul>
-                      <li><a href="./index.html">Top</a></li>
-                      <li><a href="./Illustrations.html">Illustrations</a></li>
-                      <li><a href="./chronology.html">Chronology</a></li>
-                      <li><a href="./message.html">Message</a></li>
-                      <li><a href="./creator.html">Creator</a></li>
-                  </ul>
-              </nav>
-          </div>
+  <!-- ここからheader -->
+  <header class="header">
+    <div class="header-inner">
+      <a class="header-logo" href="./index.html">
+        <img src="./images/index/1125一段ロゴ透過.png" alt="logo">
+      </a>
+      <button class="toggle-menu-button"></button>
+      <div class="header-site-menu">
+        <nav class="site-menu">
+          <ul>
+            <li><a href="./index.html">Top</a></li>
+            <li><a href="./Illustrations.html">Illustrations</a></li>
+            <li><a href="./chronology.html">Chronology</a></li>
+            <li><a href="./message.html">Message</a></li>
+            <li><a href="./creator.html">Creator</a></li>
+          </ul>
+        </nav>
       </div>
+    </div>
   </header>
-    <!-- ここまでheader -->
+  <!-- ここまでheader -->
 
-    <!-- ここからmain -->
-    <main class="main">
-    </main>
-    <!-- ここまでmain -->
+  <!-- ここからmain -->
+  <main class="main">
+  </main>
+  <!-- ここまでmain -->
 
-    <!-- ここからfooter -->
-    <footer class="footer">
-        <div class="footer-text">
-        <p class="footer-注意事項">本webサイトは石神のぞみさんの1周年をお祝いする為にファンが有志で制作したWebサイトです。</p>
-        <p class="footer-注意事項">ANYCOLOR株式会社様、にじさんじプロジェクトとは一切関係ありません。</p>
-        <p class="footer-注意事項">このホームページに記載されている一切の文書・図版・写真等を、手段や形態を問わず複製、転載することを禁じます。</p>
-      </div>
-      <div class="footer-text2">
-        <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLSe0Zhek647fA-maNipcyzNr3lz3njMOG3fYda_d1R7D2zpyMg/viewform?usp=sf_link">お問い合わせ</a>
-        <p class="copyright"><small>2023 IshigamiNozomi 1st Anniversary<br>All Rights Reserved</small></p>  
-      </div>
-      </footer>
-    <!-- ここまでfooter -->
+  <!-- ここからfooter -->
+  <footer class="footer">
+    <div class="footer-text">
+      <p class="footer-注意事項">本webサイトは石神のぞみさんの1周年をお祝いする為にファンが有志で制作したWebサイトです。</p>
+      <p class="footer-注意事項">ANYCOLOR株式会社様、にじさんじプロジェクトとは一切関係ありません。</p>
+      <p class="footer-注意事項">このホームページに記載されている一切の文書・図版・写真等を、手段や形態を問わず複製、転載することを禁じます。</p>
+    </div>
+    <div class="footer-text2">
+      <a class="contact"
+        href="https://docs.google.com/forms/d/e/1FAIpQLSe0Zhek647fA-maNipcyzNr3lz3njMOG3fYda_d1R7D2zpyMg/viewform?usp=sf_link">お問い合わせ</a>
+      <p class="copyright"><small>2023 IshigamiNozomi 1st Anniversary<br>All Rights Reserved</small></p>
+    </div>
+  </footer>
+  <!-- ここまでfooter -->
 </body>
 
 </html>
