--- a/Illustrations.html
+++ b/Illustrations.html
@@ -424,8 +424,8 @@
                 </li>
                 <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="ひた">
+                        <a class="expansion" href="./images/Illustrations/hita-expansion.jpg">
+                            <img src="./images/Illustrations/hita.jpg" alt="ひた">
                         </a>
                     </figure>
                     <div>
@@ -724,8 +724,8 @@
                 </li>
                 <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="三×七">
+                        <a class="expansion" href="./images/Illustrations/3arimr7-expansion.jpg">
+                            <img src="./images/Illustrations/3arimr7.jpg" alt="三×七">
                         </a>
                     </figure>
                     <div>
