メッセージページのウインドウ化、その他微調整

--- a/creator.html
+++ b/creator.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Creator | Ishigami 1st Anniv website</title>
-  <mata name="description" content="記念サイト作成企画へ参加してくれた方を掲載するページです">
+  <meta name="description" content="記念サイト作成企画へ参加してくれた方を掲載するページです">
     <meta name="viewport" content="width=device-width">
     <script src="./js/toggle-menu.js"></script>
     <!--ABイントレ-->
