--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Nozomi Ishigami 1st Anniversary</title>
-  <mata name="description" content="石神のぞみさんのデビュー1周年を記念するウェブサイトです">
+  <meta name="description" content="石神のぞみさんのデビュー1周年を記念するウェブサイトです">
     <meta name="viewport" content="width=device-width">
     <script src="./js/toggle-menu.js"></script>
     <script>
