--- a/Illustrations.html
+++ b/Illustrations.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Illustrations | Ishigami 1st Anniv website</title>
-    <mata name="description" content="記念のイラストを掲載しています。">
+    <meta name="description" content="記念のイラストを掲載しています。">
         <meta name="viewport" content="width=device-width">
         <script src="./js/img-kakudai.js"></script>
         <script src="./js/toggle-menu.js"></script>
