--- a/chronology.html
+++ b/chronology.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chronology | Ishigami 1st Anniv website</title>
-    <mata name="description" content="1年間の年表を掲載しています">
+    <meta name="description" content="1年間の年表を掲載しています">
         <meta name="viewport" content="width=device-width">
         <script src="./js/toggle-menu.js"></script>
         <!--ABイントレ-->
