--- a/common.html
+++ b/common.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Ishigami 1st Anniv website</title>
-  <mata name="description" content="ページの概要文を記載します">
+  <meta name="description" content="ページの概要文を記載します">
     <meta name="viewport" content="width=device-width">
     <script src="./js/toggle-menu.js"></script>
     <!--ABイントレ-->
