年表テスト調整,メッセージページ調整

--- a/chronology.html
+++ b/chronology.html
@@ -6,24 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chronology | Ishigami 1st Anniv website</title>
     <meta name="description" content="1年間の年表を掲載しています">
-        <meta name="viewport" content="width=device-width">
-        <script src="./js/toggle-menu.js"></script>
-        <!--ABイントレ-->
-        <script>
-            (function (d) {
-                var config = {
-                    kitId: 'xwp1pqz',
-                    scriptTimeout: 3000,
-                    async: true
-                },
-                    h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
-            })(document);
-        </script>
-        <link href="./css/common.css" rel="stylesheet">
-        <link href="./css/chronology.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width">
+    <script src="./js/toggle-menu.js"></script>
+    <!--ABイントレ-->
+    <script>
+        (function (d) {
+            var config = {
+                kitId: 'xwp1pqz',
+                scriptTimeout: 3000,
+                async: true
+            },
+                h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
+        })(document);
+    </script>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
+    <link href="./css/common.css" rel="stylesheet">
+    <link href="./css/chronology.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&display=swap" rel="stylesheet">
+    <script src="./js/js-scroll-effect-module.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <script src="./js/splide.js"></script>
+    <script src="./js/chonology.js"></script>
 </head>
 
 <body>
@@ -61,7 +67,7 @@
                 <h4>石神のぞみ活動記録</h4>
                 <p>「2023/01/16 ～ 2024/01/16」</p>
             </div>
-            <div class="flex1 fadeRightTrigger">
+            <!-- <div class="flex1 fadeRightTrigger">
                 <a href="https://twitter.com/nijisanji_app/status/1614819982113734657">
                     <figure class="image">
                         <img src="./images/chronology/2023_01_16_デビュー告知.png" alt="">
@@ -236,8 +242,8 @@
                         <br>一発逆転WDC2023のコーナーでは機材の取り扱いについてアカデミーへの思いの丈を叫びながら972点をたたき出した。
                     </p>
                 </div>
-            </div>
-            <div class="flex1 fadeRightTrigger">
+            </div> -->
+            <!-- <div class="flex1 fadeRightTrigger">
                 <figure class="image">
                     <img src="./images/chronology/thumbnail.png" alt="">
                 </figure>
@@ -245,6 +251,108 @@
                     <h3 class="contents-title1">2023/XX/XX</h3>
                     <h4 class="contents-title1">少女準備中・・・</h4>
                     <p class="contents-text1">年表作成中。公開までには間に合わせます。</p>
+                </div>
+            </div> -->
+
+
+            <div class="chonologyBox" data-scroll-effect>
+                <div class="imageBlock">
+                    <a href="https://www.youtube.com/watch?v=BEMn0DzO5gA">
+                        <figure class="image is-special">
+                            <img class="is-hide" src="./images/chronology/2023_02_13_信じて送り出した推しがバレンタイン雑談配信の裏でPEXしてたなんて….jpg" alt="信じて送り出した推しがバレンタイン雑談配信の裏でPEXしてたなんて…">
+                            <img class="is-normal" src="./images/chronology/2023_02_13_-ˏˋ バレンタイン ´ˎ- まったり雑談ෆ ̖́-.jpg" alt="-ˏˋ バレンタイン ´ˎ- まったり雑談ෆ ̖́-">
+                        </figure>
+                    </a>
+                </div>
+                <div class="textArea">
+                    <p class="chonologyDate01">2023/02/13</p>
+                    <h3 class="chonologyTitle01"><span class="normal">-ˏˋ バレンタイン ´ˎ- まったり雑談ෆ ̖́-</span><span class="hide">信じて送り出した推しがバレンタイン雑談配信の裏でPEXしてたなんて…</span></h3>
+                    <p class="chonologyText01">バレンタイン前日に神者と仲良く雑談配信をしていた。バレンタインということもあり、神者へのサービスが豊富だった。</p>
+                    <p class="chonologyText01 is-hide">...が、バレンタイン雑談の裏でPEXをしていたのである。&#127829;&#x1f3a2;（信じてたのに...）</p>
+                </div>
+            </div>
+
+
+            <div class="chonologyBox" data-scroll-effect>
+                <div class="imageBlock">
+                    <div class="splide">
+                        <div class="splide__track">
+                            <ul class="splide__list">
+                                <li class="splide__slide">
+                                    <a href="https://www.youtube.com/watch?v=gLsq-2PBvr0">
+                                        <figure class="image"><img src="./images/chronology/thumbnail.png"
+                                                alt="世界征服計画～理想の世界編～"></figure>
+                                    </a>
+                                </li>
+                                <li class="splide__slide"><a href="https://www.youtube.com/watch?v=gLsq-2PBvr0">
+                                        <figure class="image"><img src="./images/chronology/thumbnail.png"
+                                                alt="世界征服計画～理想の世界編～"></figure>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="textArea">
+                    <p class="chonologyDate01">2023/01/23</p>
+                    <h3 class="chonologyTitle01">世界征服計画～理想の世界編～</h3>
+                    <p class="chonologyText01">世界征服計画書の1ページをリスナーと作成する配信を行った。</p>
+                    <p class="chonologyText01">天候の問題から回線速度が1Gbps以上、基本ハッピーである世界にすることを計画に入れた。</p>
+                    <p class="chonologyText01">後半のほっぺを膨らますシーンは必見である。</p>
+                </div>
+            </div>
+
+            <div class="chonologyBox" data-scroll-effect>
+                <div class="imageBlock">
+                    <div class="splide">
+                        <div class="splide__track">
+                            <ul class="splide__list">
+                                <li class="splide__slide">
+                                    <a href="https://www.youtube.com/watch?v=gLsq-2PBvr0">
+                                        <figure class="image"><img src="./images/chronology/thumbnail.png"
+                                                alt="世界征服計画～理想の世界編～"></figure>
+                                    </a>
+                                </li>
+                                <li class="splide__slide"><a href="https://www.youtube.com/watch?v=gLsq-2PBvr0">
+                                        <figure class="image"><img src="./images/chronology/thumbnail.png"
+                                                alt="世界征服計画～理想の世界編～"></figure>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="textArea">
+                    <p class="chonologyDate01">2023/01/23</p>
+                    <h3 class="chonologyTitle01">世界征服計画～理想の世界編～</h3>
+                    <p class="chonologyText01">世界征服計画書の1ページをリスナーと作成する配信を行った。</p>
+                    <p class="chonologyText01">天候の問題から回線速度が1Gbps以上、基本ハッピーである世界にすることを計画に入れた。</p>
+                    <p class="chonologyText01">後半のほっぺを膨らますシーンは必見である。</p>
+                </div>
+            </div>
+
+            <div class="chonologyBox" data-scroll-effect>
+                <div class="imageBlock"><a href="https://twitter.com/nijisanji_app/status/1617394337301803009">
+                        <figure class="image"><img src="./images/chronology/thumbnail.png" alt=""></figure>
+                    </a>
+                </div>
+                <div class="textArea">
+                    <p class="chonologyDate01">2023/01/23</p>
+                    <h3 class="chonologyTitle01"></h3>
+                    <p class="chonologyText01">
+                        同期6名と一緒にアクセサリーブランド「Dinamis」のモデルとして、東京駅と阪急大阪梅田駅に広告が掲載される。石神にとって、初の広告出演となった。</p>
+                </div>
+            </div>
+
+
+            <div class="chonologyBox" data-scroll-effect>
+                <div class="imageBlock">
+                    <figure class="image"><img src="./images/chronology/thumbnail.png" alt=""></figure>
+                </div>
+                <div class="textArea">
+                    <p class="chonologyDate01">2023/XX/XX</p>
+                    <h3 class="chonologyTitle01">少女準備中・・・</h3>
+                    <p class="chonologyText01">年表作成中。公開までには間に合わせます。</p>
                 </div>
             </div>
         </div>
