--- a/creator.html
+++ b/creator.html
@@ -6,24 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Creator | Ishigami 1st Anniv website</title>
   <meta name="description" content="記念サイト作成企画へ参加してくれた方を掲載するページです">
-    <meta name="viewport" content="width=device-width">
-    <script src="./js/toggle-menu.js"></script>
-    <!--ABイントレ-->
-    <script>
-      (function (d) {
-        var config = {
-          kitId: 'xwp1pqz',
-          scriptTimeout: 3000,
-          async: true
-        },
-          h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
-      })(document);
-    </script>
-    <link href="./css/common.css" rel="stylesheet">
-    <link href="./css/creator.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width">
+  <script src="./js/toggle-menu.js"></script>
+  <!--ABイントレ-->
+  <script>
+    (function (d) {
+      var config = {
+        kitId: 'xwp1pqz',
+        scriptTimeout: 3000,
+        async: true
+      },
+        h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
+    })(document);
+  </script>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link href="./css/common.css" rel="stylesheet">
+  <link href="./css/creator.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -273,7 +274,7 @@
         <li><a class="hover" href="https://twitter.com/kuroneko__V">黒猫</a></li>
         <li><a class="hover" href="https://twitter.com/sano_stone">佐野ストーン</a></li>
         <li><a class="hover" href="https://twitter.com/sarunokoshika">猿の腰掛</a></li>
-　　　　<li><a class="hover" href="https://twitter.com/_knxnk_">散開</a></li>
+        　　　　<li><a class="hover" href="https://twitter.com/_knxnk_">散開</a></li>
         <li><a class="hover" href="https://twitter.com/3arimr7">三×七</a></li>
         <li><a class="hover" href="https://twitter.com/murasaki_814">舌噛み雀</a></li>
         <li><a class="hover" href="https://twitter.com/juunishiaya">十西</a></li>
