--- a/message.html
+++ b/message.html
@@ -19,6 +19,7 @@
         h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
     })(document);
   </script>
+  <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/css/modaal.min.css">
   <link href="./css/common.css" rel="stylesheet">
   <link href="./css/message.css" rel="stylesheet">
@@ -96,7 +97,8 @@
         </li>
         <section id="message-98" class="expansion-area">
           <p class="message-text">
-            拝啓 石神のぞみ様<br>堅苦しいので今から少し方言入ります。<br>1周年ほんまにおめでとうございます!<br>最初いでぃおすデビューのPV、初配信から一年経つんだなぁぁって思うと長いようで短く感じました。<br>デビューPVを見た時、本当に見た目で凄く好きと言う欲が動機でした。初配信をSwitchで観てたんですけど、最初から最後まで好きでした。(語彙力皆無((<br>そこから約1年観ていくうちに、たくさん神者達を楽しまるトーク力。同期と居る時のいじったりいじられたりする、女子大学生みたいな空気。インターネット老人会を蘇るような話や、最近だと出口8番の配信のおじさんに毎回ツッコむところにちょいちょい笑ってました。<br>神さんの配信は、本当にずっと観てておもろいし、神さん自身も色々挑戦していく姿を見て、もっと観たくなってく、なんか噛めば噛むほど美味しいパターンやと思う。<br>多分その空気は、神さん自身のリスナーへの想いがこの1年でむちゃくちゃ伝わった。<br>これからも神さんのペースで頑張ってください!どんな道でも、私たち神者は着いていきます!改めて1周年ほんまにほんまにおめでとう!!<br>敬具<br>通りすがりの神者
+            拝啓
+            石神のぞみ様<br>堅苦しいので今から少し方言入ります。<br>1周年ほんまにおめでとうございます!<br>最初いでぃおすデビューのPV、初配信から一年経つんだなぁぁって思うと長いようで短く感じました。<br>デビューPVを見た時、本当に見た目で凄く好きと言う欲が動機でした。初配信をSwitchで観てたんですけど、最初から最後まで好きでした。(語彙力皆無((<br>そこから約1年観ていくうちに、たくさん神者達を楽しまるトーク力。同期と居る時のいじったりいじられたりする、女子大学生みたいな空気。インターネット老人会を蘇るような話や、最近だと出口8番の配信のおじさんに毎回ツッコむところにちょいちょい笑ってました。<br>神さんの配信は、本当にずっと観てておもろいし、神さん自身も色々挑戦していく姿を見て、もっと観たくなってく、なんか噛めば噛むほど美味しいパターンやと思う。<br>多分その空気は、神さん自身のリスナーへの想いがこの1年でむちゃくちゃ伝わった。<br>これからも神さんのペースで頑張ってください!どんな道でも、私たち神者は着いていきます!改めて1周年ほんまにほんまにおめでとう!!<br>敬具<br>通りすがりの神者
           </p>
           <p class="message-name">annzu.txt</p>
         </section>
@@ -278,7 +280,8 @@
         </li>
         <section id="message-105" class="expansion-area">
           <p class="message-text">
-            多分だけど石神と出会ったのは特別なことではありませんでした．<br>私は委員長などの何人かを除いて移り気のあって浅く広くにじさんじを愛する人間でありました．<br>でも石神の配信(NEEDY GIRL OVERDOSE)に立ち寄った時に茶化しているようでいてでも真摯で，なんとなく居心地がよくていつしか居ついてしまいました．<br>そして、1年という時間を経て石神は特別になった気がします。<br>石神はミームに強くて、道路が好きで、魔界出身で、1年前は見つけられなかった好きなところが今ならたくさん見つけられます。そして、そのことがたまらなく嬉しいです。<br>これからも好きな石神の好きなところを増やしていけるような1年にするので覚悟の準備をしておいてくださいね!
+            多分だけど石神と出会ったのは特別なことではありませんでした．<br>私は委員長などの何人かを除いて移り気のあって浅く広くにじさんじを愛する人間でありました．<br>でも石神の配信(NEEDY GIRL
+            OVERDOSE)に立ち寄った時に茶化しているようでいてでも真摯で，なんとなく居心地がよくていつしか居ついてしまいました．<br>そして、1年という時間を経て石神は特別になった気がします。<br>石神はミームに強くて、道路が好きで、魔界出身で、1年前は見つけられなかった好きなところが今ならたくさん見つけられます。そして、そのことがたまらなく嬉しいです。<br>これからも好きな石神の好きなところを増やしていけるような1年にするので覚悟の準備をしておいてくださいね!
           </p>
           <p class="message-name">ns9.txt</p>
         </section>
@@ -404,7 +407,8 @@
         </li>
         <section id="message-108" class="expansion-area">
           <p class="message-text">
-            1周年おめでとうございます!!<br>いつも配信で元気をもらっています!!ありがとうございます!!!<br>話す内容も経験してきたエピソードもおもしろいし、ゲームしてるときのリアクションも好きです。<br>声も普段話してる時の声も歌ってみたのときとかの低音も好きです。<br>表情豊かでたくさん笑ったり驚いたりする姿も、それがばっちり伝わる赤倉先生に生み出されたビジュも最高です。あとOPのあほ毛くるくる好き。<br>たまに描いてる絵もかわいくて大好きだし悪魔の踊り方の絵もかっこよくてきれいで最高でした。<br>2年目も応援してます!!<br>BIG LOVE______
+            1周年おめでとうございます!!<br>いつも配信で元気をもらっています!!ありがとうございます!!!<br>話す内容も経験してきたエピソードもおもしろいし、ゲームしてるときのリアクションも好きです。<br>声も普段話してる時の声も歌ってみたのときとかの低音も好きです。<br>表情豊かでたくさん笑ったり驚いたりする姿も、それがばっちり伝わる赤倉先生に生み出されたビジュも最高です。あとOPのあほ毛くるくる好き。<br>たまに描いてる絵もかわいくて大好きだし悪魔の踊り方の絵もかっこよくてきれいで最高でした。<br>2年目も応援してます!!<br>BIG
+            LOVE______
           </p>
           <p class="message-name">あぽ.txt</p>
         </section>
@@ -432,7 +436,8 @@
         </li>
         <section id="message-26" class="expansion-area">
           <p class="message-text">
-            デビュー1周年おめでとうございます🎉<br>石神のお喋りとクリエイターセンス、真面目なところが本当に好き♡苦手なゲームでも諦めずに最後まで楽しんでるところが本当にいいなと思ってるし、だからこそ応援したくなるんだ～<br>好きなこと夢中になってお話する姿好きだから、これからも自分のペースで楽しくやりたいことをしていってくれたら嬉しいなっ！<br>ﾍﾟｼｮﾍﾟｼｮしてるところもかわいいけど、石神の笑顔には最高に元気もらえるよ～ありがとう⸜(*ˊᵕˋ*)⸝ ♡*゜<br>1年前の初配信でﾋﾞﾋﾞﾋﾞって惹かれてよかったな～これからも応援しています&#x2764;&#xfe0f;&#x200d;&#x1fa79;
+            デビュー1周年おめでとうございます🎉<br>石神のお喋りとクリエイターセンス、真面目なところが本当に好き♡苦手なゲームでも諦めずに最後まで楽しんでるところが本当にいいなと思ってるし、だからこそ応援したくなるんだ～<br>好きなこと夢中になってお話する姿好きだから、これからも自分のペースで楽しくやりたいことをしていってくれたら嬉しいなっ！<br>ﾍﾟｼｮﾍﾟｼｮしてるところもかわいいけど、石神の笑顔には最高に元気もらえるよ～ありがとう⸜(*ˊᵕˋ*)⸝
+            ♡*゜<br>1年前の初配信でﾋﾞﾋﾞﾋﾞって惹かれてよかったな～これからも応援しています&#x2764;&#xfe0f;&#x200d;&#x1fa79;
           </p>
           <p class="message-name">ありちゃ.txt</p>
         </section>
