--- a/_chonology_list/chronology.html
+++ b/_chonology_list/chronology.html
@@ -8,7 +8,7 @@
   <body>
     <div class="chonologyBox" data-scroll-effect>
       <div class="imageBlock"><a href="https://www.youtube.com/watch?v=HxjHOox1Es8" target="_blank">
-          <figure class="image"><img src="./images/chronology/2023_01_16_デビュー告知.png" alt="石神のぞみデビュー"></figure></a>
+          <figure class="image"><img src="./images/chronology/2023_01_16_デビュー告知.png" alt="石神のぞみデビュー"></figure></a>
       </div>
       <div class="textArea">
         <p class="chonologyDate01">2023/01/16</p>
