--- a/chronology.html
+++ b/chronology.html
@@ -93,7 +93,7 @@
 
             <div class="chonologyBox" data-scroll-effect>
                 <div class="imageBlock"><a href="https://www.youtube.com/watch?v=HxjHOox1Es8" target="_blank">
-                        <figure class="image"><img src="./images/chronology/2023_01_16_デビュー告知.png" alt="石神のぞみデビュー">
+                        <figure class="image"><img src="./images/chronology/2023_01_16_デビュー告知.png" alt="石神のぞみデビュー">
                         </figure>
                     </a>
                 </div>
